# Hand_Writing_Recognition_Cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  log_predictions.txt  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh
mnist-configs/: input-ci.config  input.config
src/: data.hpp  fullyconnected.hpp  label.hpp  loss.hpp  main.cpp  matvec.hpp  mnist_data_loader.cpp  mnist_data_loader.hpp  mnist_reader.cpp  mnist_reader.h  neuralnetwork.hpp  optimizers.hpp  relu.hpp  softmax.hpp  tensor.hpp  test_train_model.cpp
